[gd_scene load_steps=6 format=3 uid="uid://cnecist5so6qq"]

[ext_resource type="Script" path="res://winner_menu.gd" id="1_cy8k2"]
[ext_resource type="Texture2D" uid="uid://qqdmjuntgn2o" path="res://Assets/Multiplayer Winner.png" id="2_ooyom"]
[ext_resource type="Texture2D" uid="uid://bgi1277cjir1q" path="res://Assets/MainMenu Button.png" id="3_3mkdt"]
[ext_resource type="FontFile" uid="uid://dvrn08fvin7tu" path="res://Assets/RobotoCondensed-BlackItalic.ttf" id="4_4ka4w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_icjkd"]

[node name="WinnerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cy8k2")
tween_intensity = 1.1
tween_duration = 0.3

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_ooyom")

[node name="MainmenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.5
offset_top = -130.0
offset_right = 189.5
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_icjkd")
icon = ExtResource("3_3mkdt")
flat = true

[node name="WinTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.5
offset_top = 103.0
offset_right = 272.5
offset_bottom = 186.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_4ka4w")
theme_override_font_sizes/font_size = 70
text = "PLAYER WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scoreresulttext" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -100.0
offset_right = 197.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.47451, 0.14902, 1)
theme_override_fonts/font = ExtResource("4_4ka4w")
theme_override_font_sizes/font_size = 40
text = "
"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -49.0
offset_right = 193.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MainmenuButton" to="." method="_on_mainmenu_button_pressed"]
